--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
                 var trackingNumber = $('input[name="trackingNumber"]').val();
                 if (trackingNumber.trim() === '') {
                     $('#result').text('Please enter a tracking number.');
+                    console.log(trackingNumber)
                     return;
                 }
 
@@ -55,6 +56,7 @@
                         }
                     },
                     error: function (error) {
+
                         $('#result').text('Error: ' + JSON.parse(error.responseText).message);
                     }
                 });
